--- a/McLaren/style.css
+++ b/McLaren/style.css
@@ -212,11 +212,11 @@ mark {
 
 #title-cars-section {
   color: #fff;
-  font-size: clamp(1rem, 3vw, 3rem);
+  font-size: clamp(1rem, 3vw, 4rem);
   font-weight: 300;
   margin: 8rem 0;
   font-family: "dm sans";
-  text-decoration: underline #ff8000 3px;
+
   text-underline-offset: 15px;
 }
 
@@ -242,7 +242,6 @@ mark {
   overflow: hidden;
   cursor: pointer;
   transition: transform 0.6s ease, box-shadow 0.4s ease;
-  
 }
 
 #car1 {
@@ -260,13 +259,11 @@ mark {
 }
 
 #car1:hover {
-  transform: scale(1.05) translateY(20px);
-  
+  transform: scale(1.01) translateX(20px);
 }
 
 #car2:hover {
-  transform: scale(1.05) translateY(20px);
-  
+  transform: scale(1.01) translateX(-20px);
 }
 
 #car3 {
@@ -284,13 +281,11 @@ mark {
 }
 
 #car3:hover {
-  transform: scale(1.05) translateY(-20px);
-  
+  transform: scale(1.01) translateX(20px);
 }
 
 #car4:hover {
-  transform: scale(1.05) translateY(-20px);
-  
+  transform: scale(1.01) translateX(-20px);
 }
 
 .title-car-model {
@@ -300,8 +295,8 @@ mark {
   top: 5%;
   color: #fff;
   font-size: 3.5rem;
-  font-weight: 200;
-  font-family: "DM sans";
+  font-weight: 300;
+  font-family: "Josefin Sans";
   margin-top: 20px;
 }
 
@@ -347,11 +342,11 @@ mark {
 
 #blog-title {
   color: #fff;
-  font-size: clamp(1rem, 3vw, 3rem);
+  font-size: clamp(1rem, 3vw, 4rem);
   font-weight: 300;
   margin: 3rem 0;
   font-family: "dm sans";
-  text-decoration: underline #ff8000 3px;
+
   text-underline-offset: 10px;
 }
 
@@ -531,6 +526,7 @@ mark {
   font-weight: 500;
   cursor: pointer;
   border-radius: 2px;
+  text-decoration: 0;
   transition: transform 0.2s;
 }
 
@@ -1017,6 +1013,18 @@ mark {
   background-image: url("photos-history-blogs/licensed-image (1).jpeg");
 }
 
+#hero-photo-track-road {
+  background-image: url("photos-history-blogs/vol-22-mclaren-f1-1-661ef1c3df1b9 (1).avif");
+}
+
+#blog-pages-track-road-photo1 {
+  background-image: url("photos-history-blogs/1993_McLaren_F1GTR-7-15361.jpg");
+}
+
+#blog-pages-track-road-photo2 {
+  background-image: url("photos-history-blogs/Original-2104-71808mclar_mclaren_12c_2013my015.jpg");
+}
+
 .quote-section {
   width: 100%;
   height: auto;
@@ -1076,4 +1084,24 @@ mark {
   color: #000000;
   font-size: clamp(1.2rem, 2vw, 1.8rem);
   padding: 0.5rem;
+}
+
+.impact-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1500px;
+  height: auto;
+  background: #fff;
+  padding: 0 2rem;
+  margin: 4rem 0;
+}
+
+.impact-text {
+  font-size: clamp(3rem, 4.5vw, 10rem);
+  text-align: center;
+  font-weight: 700;
 }
