--- a/McLaren/style.css
+++ b/McLaren/style.css
@@ -34,7 +34,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* important: umple și cropuiește fără bare */
+  object-fit: cover;
   z-index: -1;
 }
 
@@ -42,7 +42,7 @@ html {
   position: absolute;
   width: 100%;
   height: 8.5vh;
-  background-color: #000000a6;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
@@ -67,10 +67,16 @@ html {
   margin-left: 15px;
   justify-self: start;
   text-decoration: 0;
+  outline: 0;
 }
 .M {
   font-style: italic;
   color: #fff;
+}
+
+.M-black {
+  font-style: italic;
+  color: #000000;
 }
 .orange {
   color: #ff8000;
@@ -89,14 +95,14 @@ html {
 .buttons {
   justify-self: center;
   display: flex;
-  gap: 20px;
+  gap: 4rem;
 }
 
 .button-header {
   text-decoration: none;
   font-size: 0.9rem;
   color: #fff;
-  padding: 10px 20px;
+  padding: 10px 0;
   background-color: #00000000;
   border: 0;
   outline: 0;
@@ -112,7 +118,7 @@ html {
 #accountIcon {
   width: 22px;
   height: 22px;
-  background-image: url("photos/user (1).png");
+  background-image: url("photos/icons8-user-50.png");
   background-size: cover;
   background-position: center;
   margin-right: 15px;
@@ -122,7 +128,7 @@ html {
 }
 
 #accountIcon:hover {
-  background-image: url("photos/orange-icon.png");
+  background-image: url("photos/icons8-user-100.png");
 }
 
 #video-overlay {
@@ -135,18 +141,6 @@ html {
   left: 50%;
   top: 70%;
   transform: translateX(-50%);
-  animation: slideUp 0.6s ease-out forwards;
-}
-
-@keyframes slideUp {
-  from {
-    transform: translateX(-50%) translateY(10vh); /* jos de tot */
-    opacity: 0;
-  }
-  to {
-    transform: translateX(-50%) translateY(0); /* poziția finală */
-    opacity: 1;
-  }
 }
 
 .big {
@@ -171,6 +165,7 @@ mark {
   color: #fff;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   padding: 0 0.4rem;
+  border-radius: 0.2rem;
   font-family: "Josefin Sans", sans-serif;
 }
 
@@ -232,9 +227,9 @@ mark {
 }
 
 .car {
-  display: block; /* pentru a arăta ca div */
-  text-decoration: none; /* fără subliniere */
-  color: inherit; /* păstrează culoarea textului */
+  display: block;
+  text-decoration: none;
+  color: inherit;
   position: relative;
   aspect-ratio: 16 / 12;
   background: #2c2c2c;
@@ -259,11 +254,11 @@ mark {
 }
 
 #car1:hover {
-  transform: scale(1.01) translate(10px, 10px);
+  transform: scale(1.01);
 }
 
 #car2:hover {
-  transform: scale(1.01) translate(-10px, 10px);
+  transform: scale(1.01);
 }
 
 #car3 {
@@ -281,11 +276,11 @@ mark {
 }
 
 #car3:hover {
-  transform: scale(1.01) translate(10px, -10px);
+  transform: scale(1.01);
 }
 
 #car4:hover {
-  transform: scale(1.01) translate(-10px, -10px);
+  transform: scale(1.01);
 }
 
 .title-car-model {
@@ -566,13 +561,13 @@ mark {
   flex-wrap: wrap;
   gap: 2rem;
   width: 90%;
-  max-width: 1400px; /* nu devine prea lat pe monitoare mari */
+  max-width: 1400px;
   color: #fff;
-  justify-content: center; /* centrează coloanele pe mobil */
+  justify-content: center;
 }
 
 .footer-sections {
-  flex: 1 1 100px; /* crește/scade cu minim 180px */
+  flex: 1 1 100px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -600,12 +595,11 @@ mark {
   color: #ff8000;
 }
 
-/* Logo în footer */
-
 #logo-footer-text {
   font-weight: 700;
   font-size: clamp(1.8rem, 2.5vw, 2.5rem);
   white-space: nowrap;
+  color: #fff;
 }
 
 /*--------------------------------- Car Pages Hero--------------------------------------*/
@@ -1113,6 +1107,148 @@ mark {
   font-weight: 700;
 }
 
+.log-in-section {
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+  display: flex;
+}
+
+.account-pages-back-image {
+  width: 65vw;
+  height: 100vh;
+  background-image: url("photos/McLaren-Gallery-3.webp");
+  background-position: center;
+  background-size: cover;
+}
+
+#logo-account-pages {
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+.log-in-container {
+  width: 35vw;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 3rem 0;
+}
+
+.log-in-container2 {
+  width: 18vw;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+#logo-account-pages {
+  color: #000;
+  font-weight: 700;
+}
+
+.hello-text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+#welcome {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.input-style {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 5vh;
+  padding: 1rem;
+  font-size: 1rem;
+  color: #000;
+  border-radius: 3px;
+  outline: 0;
+  border: solid 1px;
+  text-decoration: none;
+}
+
+.input-create-account-structure-label-and-input {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.container-for-password-show-hide-icon {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.3rem;
+  width: 100%;
+  height: 5vh;
+  border: solid 1px #000;
+  border-radius: 3px;
+  padding-right: 8px;
+}
+
+#password {
+  height: 1px;
+  border: none;
+}
+
+#password-confirm {
+  height: 1px;
+  border: none;
+}
+.password-visibility-icons {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+#btn-account-pages {
+  color: #fff;
+  background-color: #000;
+  cursor: pointer;
+}
+
+#btn-account-pages:hover {
+  background-color: #363636;
+}
+
+.switch-log-in-sign-in {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.text-with-lines {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /*--------------------------------- Media Queries--------------------------------------*/
 
 @media (max-width: 1024px) {
@@ -1162,6 +1298,18 @@ mark {
 
   .text-car-introduction-container {
     margin: 2rem 0;
+  }
+
+  .account-pages-back-image {
+    display: none;
+  }
+
+  .log-in-container {
+    width: 100%;
+  }
+
+  .log-in-container2 {
+    width: 80%;
   }
 }
 
@@ -1264,4 +1412,178 @@ mark {
   .blog-pages-photos {
     height: 40vh;
   }
+}
+
+@media (max-width: 400px) {
+  .container-for-password-show-hide-icon {
+    height: 6vh;
+  }
+
+  .input-style {
+    height: 6vh;
+  }
+}
+
+@media screen and (max-width: 1024px) and (max-height: 600px) {
+  .container-for-password-show-hide-icon {
+    height: 6vh;
+  }
+
+  .input-style {
+    height: 6vh;
+  }
+}
+
+/*--------------------------------- CSS Functionalitate --------------------------------------*/
+
+.menu-toggle {
+  display: none;
+  cursor: pointer;
+}
+
+.menu-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.mobile-nav {
+  position: fixed;
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  gap: 1.5rem;
+  padding: 2rem;
+}
+
+.mobile-nav a {
+  color: #000;
+}
+
+.mobile-nav.active {
+  display: flex;
+}
+
+.bottom-border-mobile-menu-selections {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  text-align: left;
+  width: 80vw;
+  height: auto;
+  border-bottom: 1px solid #bbbbbb;
+}
+
+#close-menu-btn {
+  width: 40px;
+  height: 40px;
+}
+
+#mobile-menu-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url("photos/icons8-menu (1).svg");
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+  transition: background-image 0.2s;
+  justify-self: baseline;
+  margin: 3px 0 0 15px;
+}
+
+@media (max-width: 1024px) {
+  .buttons {
+    display: none;
+  }
+
+  .menu-toggle {
+    display: block;
+    order: 1;
+  }
+
+  #logo {
+    order: 2;
+  }
+
+  #accountIcon {
+    order: 3;
+    margin-left: auto;
+  }
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.8s ease-out;
+}
+
+.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.hidden2 {
+  opacity: 0;
+  transition: all 0.3s ease-out;
+}
+
+.show2 {
+  opacity: 1;
+}
+
+.car:nth-child(1).show {
+  transition-delay: 0ms;
+}
+
+.car:nth-child(2).show {
+  transition-delay: 100ms;
+}
+
+.car:nth-child(3).show {
+  transition-delay: 0ms;
+}
+
+.car:nth-child(4).show {
+  transition-delay: 100ms;
+}
+
+.blog-cards:nth-child(1).show {
+  transition-delay: 0ms;
+}
+
+.blog-cards:nth-child(2).show {
+  transition-delay: 200ms;
+}
+
+.blog-cards:nth-child(3).show {
+  transition-delay: 400ms;
+}
+
+.specs-containers:nth-child(1).show {
+  transition-delay: 0ms;
+}
+
+.specs-containers:nth-child(2).show {
+  transition-delay: 200ms;
+}
+
+.specs-containers:nth-child(3).show {
+  transition-delay: 400ms;
+}
+
+.cards-car-pages:nth-child(1).show {
+  transition-delay: 0ms;
+}
+
+.cards-car-pages:nth-child(2).show {
+  transition-delay: 200ms;
+}
+
+.cards-car-pages:nth-child(3).show {
+  transition-delay: 400ms;
 }
