--- a/docs/style.css
+++ b/docs/style.css
@@ -524,7 +524,7 @@ mark {
   font-weight: 500;
   cursor: pointer;
   border-radius: 2px;
-  text-decoration: 0;
+  text-decoration: none;
   transition: transform 0.2s;
 }
 
@@ -606,6 +606,13 @@ mark {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
 }
 
 /*--------------------------------- Car Pages Hero--------------------------------------*/
